# kit-workspace

./: history.json  install.sh  kit-workspace
.claude/commands/: gitsync.md
drivers/: generic.sh  petfi-kit.sh
lib/: checkpoint.sh  colors.sh  common.sh  dag.sh  log.sh  merge.sh  meta-orchestrator.sh  mode-selector.sh  notify.sh  orchestrator.sh  refine.sh  safety.sh  session.sh  stall-sentinel.sh  tmux-manager.sh  utils.sh  workspace.sh  worktree.sh
templates/: job-multi-repo.json  job-single-repo.json  session.json  workspace.json
ui/: index.html  package-lock.json  package.json  vite.config.js
ui/src/: main.js  style.css
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/capabilities/: default.json
ui/src-tauri/src/: lib.rs  main.rs
