[package]
name = "kit-workspace-ui"
version = "0.1.0"
edition = "2021"

[lib]
name = "kit_workspace_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
